@@ -1,3 +1,5 @@
+- Refactor: Country deprecated methods cleanup
+
 32.8.4 (14-04-2021)
 - Bug fix: When listing rooms schedules, take also into account lesson instances occupations
 
